--- a/src/scss/setting/_reset.scss
+++ b/src/scss/setting/_reset.scss
@@ -38,7 +38,7 @@ button,
 header,
 main,
 article {
-  // margin: 0;
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
   word-break: break-all;
