--- a/src/scss/section/_banner.scss
+++ b/src/scss/section/_banner.scss
@@ -20,6 +20,9 @@
   }
 
   #slider {
+    @media (max-width: 1440px) {
+      width: 80%;
+    }
     margin: 0 auto;
     width: 60%;
     overflow: hidden;
