--- a/src/scss/section/_site.scss
+++ b/src/scss/section/_site.scss
@@ -27,9 +27,10 @@
     text-decoration: none;
   }
   .site-title {
-    width: 16%;
+    width: 15%;
     text-align: start;
     padding: 80px 0 55px;
+    margin-right: 60px;
     h2 {
       width: 100%;
       text-align: start;
@@ -43,13 +44,16 @@
   }
 
   .site-contents {
+    @media (max-width: 1500px) {
+      padding: 150px 80px 50px;
+    }
     display: flex;
     align-items: flex-start;
     gap: 3%;
     padding: 150px 80px 50px;
 
     .site-view {
-      width: 70%;
+      width: 40%;
       height: 65vh;
       .site-img {
         width: 100%;
@@ -96,7 +100,8 @@
   .site-text {
     word-break: keep-all;
     padding: 85px 0px 100px;
-    width: 30%;
+    // width: 30%;
+    flex-grow: 1;
 
     .site-info {
       line-height: 1.6;
@@ -109,6 +114,7 @@
     }
     .site-p {
       color: rgba(255, 255, 255, 0.7);
+      word-break: keep-all;
       ul {
         line-height: 1.6;
         text-align: start;
@@ -120,9 +126,11 @@
             width: 100px;
             text-transform: uppercase;
             padding-right: 20px;
+            word-break: keep-all;
           }
           span {
             width: 350px;
+            word-break: keep-all;
           }
         }
       }
@@ -170,32 +178,53 @@
   }
 }
 #site,
-.sec3 {
-  .site-contents {
-    .site-view {
-      width: 85%;
-    }
-  }
-}
+// .sec3 {
+//   .site-contents {
+//     .site-view {
+//       width: 85%;
+//     }
+//   }
+// }
 .sec4 {
   .fp-overflow {
     overflow-y: hidden;
   }
   .site-contents {
+    @media (max-width: 1500px) {
+      padding: 150px 80px 50px;
+    }
     padding: 150px 20px 50px 80px;
     // padding: 150px 50px 50px 80px;
     .site-title {
-      width: 19% !important;
+      // width: 19% !important;
       h2 {
         font-size: 3vw;
         padding-right: -200px;
       }
     }
     .site-view {
-      width: 70% !important;
+      // width: 70% !important;
     }
     .site-text {
       width: 23% !important;
     }
   }
+}
+.fp-responsive .fp-is-overflow.fp-section {
+  height: auto !important;
+}
+.fp-is-overflow .fp-overflow.fp-auto-height,
+.fp-is-overflow .fp-overflow.fp-auto-height-responsive,
+.fp-is-overflow > .fp-overflow {
+  overflow-y: auto;
+}
+.fp-overflow {
+  outline: 0;
+}
+.fp-overflow {
+  justify-content: flex-start;
+  max-height: 100%;
+}
+.fp-overflow {
+  overflow-x: hidden;
 }
