--- a/src/scss/section/_product.scss
+++ b/src/scss/section/_product.scss
@@ -35,8 +35,11 @@
   }
   .g-container {
     @media (max-width: 1280px) {
-      width: 1150px;
+      width: 92vw;
     }
+    // @media (max-width: 900px) {
+    //   width: 824px;
+    // }
     margin: 0 auto;
     width: 1220px;
     height: 60%;
