--- a/src/scss/section/_motion.scss
+++ b/src/scss/section/_motion.scss
@@ -4,8 +4,8 @@
 
   h2 {
     position: relative;
-    font-size: 4vw;
-    color: #4e4e4e;
+    font-size: 3vw;
+    color: #666666;
     // padding: 25px 0;
     word-break: keep-all;
     margin-bottom: 30px;
