--- a/src/scss/section/_banner.scss
+++ b/src/scss/section/_banner.scss
@@ -2,8 +2,8 @@
   height: 100vh;
 
   h2 {
-    font-size: 4vw;
-    color: #4e4e4e;
+    font-size: 3vw;
+    color: #666666;
     // padding: 25px 0;
     word-break: keep-all;
     text-align: center;
