--- a/src/css/comm.css
+++ b/src/css/comm.css
@@ -1168,8 +1168,8 @@ legend {
   height: 100vh;
 }
 #contact h2 {
-  font-size: 4vw;
-  color: #4e4e4e;
+  font-size: 3vw;
+  color: #666666;
   word-break: keep-all;
   text-align: center;
 }
